feat: add TTL to purchase key in Redis Lua script